Address fourth Copilot review round: timeout floor, upsert context, real model tests, parallel lock
Config.timeoutMs() accepted zero and negative values, which pass straight
through to Playwright's default/assertion timeouts. Playwright treats a
zero timeout as disabled, so a missing selector or title could hang the
smoke job indefinitely instead of failing after a bounded interval. Now
rejects non-positive values; added tests for zero and negative cases.

TestRunContext.recordCreatedUser/recordCreatedSubscription only appended,
but TestUserRef/SubscriptionRef are immutable records, so a cleanup
implementation calling record*(ref.withCleanupStatus(...)) would have left
both the stale original and the updated entry in the list. Switched to maps
keyed by userId/subscriptionId (upsert semantics); added tests proving an
update replaces rather than duplicates, and that distinct ids stay distinct.

The PR description claimed test coverage for the "cleanup-status model"
that didn't actually exist as a committed test — the last two rounds'
fixes to SubscriptionRef/TestUserRef were only verified with throwaway
scripts. Added real SubscriptionRefTest/TestUserRefTest covering the
sentinel-removal and additive-history behavior, so the claim is now true.

junit-platform.properties disabled only Jupiter's parallel executor;
SmokeTestRunner runs on the separate Cucumber JUnit-Platform engine, which
has its own independent parallel-execution key that nothing pinned down.
Confirmed a properties-file default alone isn't sufficient either, since a
system property takes precedence over it per JUnit Platform's own
resolution — and qaSmokeTest forwards arbitrary -D flags by design.
Verified directly: an explicit systemProperty() call placed after the bulk
forwarding wins in the forked JVM even against an explicit
-Dcucumber.execution.parallel.enabled=true override. Added both the
properties-file default and the non-overridable lock in build.gradle.

Co-Authored-By: Claude Sonnet 5 <norep