@@ -4,9 +4,9 @@ import com.investing.pro.model.SubscriptionRef;
 import com.investing.pro.model.TestUserRef;
 import com.investing.pro.support.IdGenerator;
 
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Per-scenario state, injected by PicoContainer so every scenario gets its own instance — the
@@ -20,8 +20,12 @@ public final class TestRunContext {
 
     private final String runId = IdGenerator.runId();
     private String scenarioId = "unset";
-    private final List<TestUserRef> createdUsers = new ArrayList<>();
-    private final List<SubscriptionRef> createdSubscriptions = new ArrayList<>();
+    // Keyed by userId/subscriptionId rather than a plain list: TestUserRef/SubscriptionRef are
+    // immutable, so recording an updated status (e.g. via withCleanupStatus) means calling
+    // recordCreatedUser/recordCreatedSubscription again with the new value for the same id — a
+    // list would keep the old entry alongside the new one instead of replacing it.
+    private final Map<String, TestUserRef> createdUsers = new LinkedHashMap<>();
+    private final Map<String, SubscriptionRef> createdSubscriptions = new LinkedHashMap<>();
 
     public String runId() {
         return runId;
@@ -35,19 +39,21 @@ public final class TestRunContext {
         this.scenarioId = IdGenerator.scenarioId(scenarioName);
     }
 
+    /** Inserts a newly created user, or replaces the existing entry for the same userId. */
     public void recordCreatedUser(TestUserRef user) {
-        createdUsers.add(user);
+        createdUsers.put(user.userId(), user);
     }
 
+    /** Inserts a newly created subscription, or replaces the existing entry for the same subscriptionId. */
     public void recordCreatedSubscription(SubscriptionRef subscription) {
-        createdSubscriptions.add(subscription);
+        createdSubscriptions.put(subscription.subscriptionId(), subscription);
     }
 
     public List<TestUserRef> createdUsers() {
-        return Collections.unmodifiableList(createdUsers);
+        return List.copyOf(createdUsers.values());
     }
 
     public List<SubscriptionRef> createdSubscriptions() {
-        return Collections.unmodifiableList(createdSubscriptions);
+        return List.copyOf(createdSubscriptions.values());
     }
 }
